--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,10 +13,18 @@ body {
 }
 
 #search-form {
+  position: fixed;
+  width: 100%;
+  height: 26px;
+  top: 0;
   background-color: deepskyblue;
   text-align: center;
 }
 
 .load-more {
   display: none;
+}
+
+.gallery {
+  margin-top: 26px;
 }
