--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -26,5 +26,25 @@ body {
 }
 
 .gallery {
-  margin-top: 26px;
+  margin-top: 32px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+}
+
+.photo-card {
+  border: 1px solid black;
+}
+
+.info {
+  display: flex;
+  justify-content: space-around;
+}
+
+.info-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
